<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_black</name>
  <version>0.2.0</version>
  <description>
    The ability to check code against style conventions using
    black and generate xUnit test result files.
  </description>
  <maintainer email="tylerjw@gamil.com">Tyler Weaver</maintainer>
  <maintainer email="ignacio@dexory.com">Ignacio Vizzo</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>black</exec_depend>
  <exec_depend>python3-unidiff</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
