<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_cmake_black</name>
  <version>0.2.0</version>
  <description>
    The CMake API for ament_black to lint Python code using black.
  </description>
  <maintainer email="tylerjw@gamil.com">Tyler Weaver</maintainer>
  <maintainer email="ignacio@dexory.com">Ignacio Vizzo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_core</buildtool_depend>
  <buildtool_depend>ament_cmake_test</buildtool_depend>

  <buildtool_export_depend>ament_black</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake_test</buildtool_export_depend>

  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
